# delta-compress-llm

./: README-delta.md  README.md  llama3-chat.jinja
common/: arg.cpp  common.cpp  common.h
ggml/include/: ggml-cuda.h
ggml/src/ggml-cuda/: delta-kv.cu  delta-kv.cuh  mmvq.cu  weight-skip.cu  weight-skip.cuh
include/: llama.h
src/: CMakeLists.txt  llama-context.cpp  llama-kv-cache-delta.cpp  llama-kv-cache-delta.h  llama-kv-cache.cpp  llama-kv-cache.h
tests/: test-delta-kv.cpp
tools/: CMakeLists.txt
tools/delta-kv-bench/: CMakeLists.txt  delta-kv-bench.cpp
tools/weight-skip-bench/: CMakeLists.txt  real-model-analysis.cpp  weight-skip-bench.cpp
